Comit al master de blogpost en version mas reciente

--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a mostrar un Blog</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id= "post">
+            <h1>Titulo de el Post</h1>
+            <p>Y este es el parrafo de inicio donde estamos usando ramas with Git</p>
+        </div>
+    </div> 
 </body>
 </html>
