--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id= "post">
             <h1>Titulo de el Post</h1>
             <p>Y este es el parrafo de inicio donde estamos usando ramas with Git</p>
