--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,10 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            HyperBlog
+            <span id="tagline">
+                Tu blog de Git 
+            </span>
         </div>
         <div id= "post">
             <h1>Titulo de el Post</h1>
