agregado parrafo adicional al blog

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,10 @@
         <div id= "post">
             <h1>Titulo de el Post</h1>
             <p>Y este es el parrafo de inicio donde estamos usando ramas with Git</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic magnam
+               asperiores pariatur aliquam aperiam blanditiis, perspiciatis,
+               sint unde quam, laudantium accusantium molestias?
+               Quaerat aut facere totam illo voluptates fugit reprehenderit?</p>
         </div>
     </div> 
 </body>
