--- a/blogspot.html
+++ b/blogspot.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             HyperBlog
             <span id="tagline">
-                Tu blog de Git 
+                Tu blog de Cabecera
             </span>
         </div>
         <div id= "post">
