--- a/blogspot.html
+++ b/blogspot.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             HyperBlog
             <span id="tagline">
-                Tu blog de Git 
+                Tu blog main 
             </span>
         </div>
         <div id= "post">
@@ -22,6 +22,7 @@
                asperiores pariatur aliquam aperiam blanditiis, perspiciatis,
                sint unde quam, laudantium accusantium molestias?
                Quaerat aut facere totam illo voluptates fugit reprehenderit?</p>
+            <p>here we go again</p>   
         </div>
     </div> 
 </body>
